<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.syrianhaven.MainActivity"
    android:orientation="vertical">

    <Button
        style="@style/CountryButtons"
        android:text="@string/usa_country_name"
        android:id="@+id/Usa_button"
        android:background="@drawable/usa_flag"
        android:focusableInTouchMode="false"
        />
    <Button
        style="@style/CountryButtons"
        android:text="@string/aus_country_name"
        android:id="@+id/Aus_button" />

    <Button
        style="@style/CountryButtons"
        android:text="@string/cdn_country_name"
        android:id="@+id/Cdn_button" />

    <Button
        style="@style/CountryButtons"
        android:text="@string/deu_country_name"
        android:id="@+id/Deu_button" />
    <Button
        style="@style/CountryButtons"
        android:text="@string/nor_country_name"
        android:id="@+id/Nor_button" />

</LinearLayout>
